[gd_scene load_steps=2 format=2]

[ext_resource path="res://leaderboard.gd" type="Script" id=1]

[node name="Leaderboard" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 30.0

[node name="TextEdit" type="TextEdit" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 305.0
margin_bottom = 30.0
text = "Submit Result"

[node name="GetScoreRequest" type="HTTPRequest" parent="."]

[node name="SaveScoreRequest" type="HTTPRequest" parent="."]

[node name="Title" type="Label" parent="."]
margin_top = 34.0
margin_right = 1920.0
margin_bottom = 48.0
text = "Leaderboard"

[node name="ScoresList" type="VBoxContainer" parent="."]
margin_top = 52.0
margin_right = 1920.0
margin_bottom = 52.0

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="GetScoreRequest" to="." method="_on_GetScoreRequest_request_completed"]
[connection signal="request_completed" from="SaveScoreRequest" to="." method="_on_SaveScoreRequest_request_completed"]
